--- a/synthese/complexite_algo_fifo.tex
+++ b/synthese/complexite_algo_fifo.tex
@@ -8,7 +8,7 @@ très probablement, un noeud actif, il est donc candidat à la sélection lors d
 de l'algorithme. Seulement rien ne garantit qu'il sera à nouveau choisi, il peut donc être
 intéressant dans ce genre de situation de réaliser plusieurs poussages saturants suivis soit d'un
 poussage non saturant, soit d'une opération de ré-étiquetage. C'est cette suite d'opérations de que
-nous appellerons dorénavant \emph{analyse de noeud}
+nous appellerons dorénavant \emph{analyse de noeud}.
 
 \begin{thrm}
 	L'algorithme de préflot FIFO s'exécute en un temps $O(n^3)$.
