--- a/synthese/library.tex
+++ b/synthese/library.tex
@@ -5,7 +5,7 @@
 \usepackage[french]{babel}
 \usepackage{graphicx}
 \usepackage{moreverb}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{pdfpages}
 \usepackage{eurosym}
 \usepackage{fullpage}
