--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -11,21 +11,18 @@
 \tableofcontents
 \newpage
 
-\listalgorithmname
-\newpage
-
 \part{Introduction, pré-requis}
-\input{introduction}
+\input{introduction.tex}
 
 \part{Les algorithmes}
-\input{pres_algo}
+\input{pres_algo.tex}
 
 \part{Complexité}
 \section{Algorithme Générique}
 
-\input{complexite_algo_generique}
+\input{complexite_algo_generique.tex}
 \section{Algorithme FIFO}
-\input{complexite_algo_fifo}
+\input{complexite_algo_fifo.tex}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
